fixed alignment

--- a/less/index.less
+++ b/less/index.less
@@ -371,33 +371,51 @@ section.cover {
 	}
 }
 
-
+// mobile  
 @media(max-width:500px)
 {
 	.container{
 		width:100%;
 	}
-	header{
+
+	.nav-container{
 		width: 100%;
-		nav{
-			.flex-column();
-			align-content: center;
-			
-			a{
-				padding:5px 10px;
+		margin: 0px auto;
+		
+			header {
+			width: 100%;
+			background: white;
+
+			nav {
+				.flex-column();
+				align-items: center;
+
+				a {
+					
+					padding: 0px 100% 10px;
+					border: 1px solid @main-color;
+					
+					text-align: center;
+
+				}
 			}
 		}
 	}
+	
 
 	.header2{
 		.flex-column();
+		align-items: center;
 		
 		.left{
 			.flex-column();
-			img {
-				margin-left:6rem;
+			align-items: center;
+			justify-content: center;
+			text-align: center;
+			
+			h1{
+				margin-left:0;
 			}
-
 		}
 
 		.right{
